@@ -1,5 +1,6 @@
 2008-11-05 Steve Bennett <steveb@workware.net.au>
 
+	* jim.c: add support for proc default arguments to jim
 	* jim.c: fix lazy expression evaluation with unary not
 
 2008-11-04 Steve Bennett <steveb@workware.net.au>
